adding in more goodies and styling

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,14 +5,13 @@
     font-family: 'Poppins', sans-serif
 }
 body{
-    background: teal
+    background: rgba(255, 204, 0, 0.91);
 }
 .wrapper{
     max-width: 600px;
     margin: 80px auto 50px;
     padding: 30px;
     border-radius: 20px;
-    background: #c0e2df;
     position: relative;
     min-height: 550px;
     overflow: hidden
@@ -125,26 +124,182 @@ label{
 }
 
 /* Header CSS */
-body { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; font-family: 'Overpass', sans-serif; letter-spacing: 0px; font-size: 17px; color: #8d8f90; font-weight: 400; line-height: 32px; background-color: #edefef; }
-h1, h2, h3, h4, h5, h6 { color: #25292a; margin: 0px 0px 10px 0px; font-family: 'Overpass', sans-serif; font-weight: 700; letter-spacing: -1px; line-height: 1; }
-h1 { font-size: 60px; }
-h2 { font-size: 28px; line-height: 38px; }
-h3 { font-size: 22px; line-height: 32px; }
-h4 { font-size: 20px; }
-h5 { font-size: 17px; }
-h6 { font-size: 12px; }
-p { margin: 0 0 20px; line-height: 1.7; }
-p:last-child { margin: 0px; }
-a { text-decoration: none; color: #8d8f90; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; transition: all 0.3s; }
-a:focus, a:hover { text-decoration: none; color: #f85759; }
+body {
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    font-family: 'Overpass', sans-serif;
+    letter-spacing: 0px;
+    font-size: 17px;
+    color: #8d8f90;
+    font-weight: 400;
+    line-height: 32px;
+    background-color: #edefef;
+}
+h1, h2, h3, h4, h5, h6 {
+    color: #25292a;
+    margin: 0px 0px 10px 0px;
+    font-family: 'Overpass', sans-serif;
+    font-weight: 700;
+    letter-spacing: -1px;
+    line-height: 1;
+}
+h1 {
+    font-size: 60px;
+}
+h2 {
+    font-size: 28px;
+    line-height: 38px;
+}
+h3 {
+    font-size: 22px;
+    line-height: 32px;
+}
+h4 {
+    font-size: 20px;
+}
+h5 {
+    font-size: 17px;
+}
+h6 {
+    font-size: 12px;
+}
+p {
+    margin: 0 0 20px;
+    line-height: 1.7;
+}
+p:last-child {
+    margin: 0px;
+}
+a {
+    text-decoration: none;
+    color: #8d8f90;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+}
+a:focus, a:hover {
+    text-decoration: none;
+    color: #f85759;
+}
 
+.page-caption {
+    padding-top: 170px;
+    padding-bottom: 174px;
+}
+.page-title {
+    font-size: 46px;
+    line-height: 1;
+    color: #fff;
+    font-weight: 600;
+    text-align: center;
+}
+.card-section {
+    position: relative;
+    bottom: 60px;
+    background-color: rgba(255, 204, 0, 0.91);
+}
+.card-block {
+    padding: 80px;
+    border-radius: 40px;
+}
+.section-title {
+    border-radius: 40px;
+    margin-bottom: 60px;
+    padding-top: 15px;
+    padding-bottom: 40px;
+    background-color: rgb(129, 70, 7);
+}
+.container {
+    border-radius: 20%;
+}
 
+.tv-background {
+    background-color: lightslategray;
+}
 
-.page-header { background: url(./imgs/thisistheway.jpg)no-repeat; position: relative; background-size: cover; }
-.page-caption { padding-top: 170px; padding-bottom: 174px; }
-.page-title { font-size: 46px; line-height: 1; color: #fff; font-weight: 600; text-align: center; }
-
-.card-section { position: relative; bottom: 60px; }
-.card-block { padding: 80px; }
-.section-title { margin-bottom: 60px; }
-.container { border-radius: 20%;}
+.carousel {
+	margin: 30px auto 60px;
+	padding: 0 80px;
+}
+.carousel .carousel-item {
+	text-align: center;
+	overflow: hidden;
+}
+.carousel .carousel-item h4 {
+	font-family: 'Varela Round', sans-serif;
+}
+.carousel .carousel-item img {
+	max-width: 100%;
+	display: inline-block;
+}
+.carousel .carousel-item .btn {
+	border-radius: 0;
+	font-size: 12px;
+	text-transform: uppercase;
+	font-weight: bold;
+	border: none;
+	background: #a177ff;
+	padding: 6px 15px;
+	margin-top: 5px;
+}
+.carousel .carousel-item .btn:hover {
+	background: #8c5bff;
+}
+.carousel .carousel-item .btn i {
+	font-size: 14px;
+	font-weight: bold;
+	margin-left: 5px;
+}
+.carousel .thumb-wrapper {
+	margin: 5px;
+	text-align: left;
+	background: #fff;
+	box-shadow: 0px 2px 2px rgba(0,0,0,0.1);   
+}
+.carousel .thumb-content {
+	padding: 15px;
+	font-size: 13px;
+}
+.carousel-control-prev, .carousel-control-next {
+	height: 44px;
+	width: 44px;
+	background: none;	
+	margin: auto 0;
+	border-radius: 50%;
+	border: 3px solid rgba(0, 0, 0, 0.8);
+}
+.carousel-control-prev i, .carousel-control-next i {
+	font-size: 36px;
+	position: absolute;
+	top: 50%;
+	display: inline-block;
+	margin: -19px 0 0 0;
+	z-index: 5;
+	left: 0;
+	right: 0;
+	color: rgba(0, 0, 0, 0.8);
+	text-shadow: none;
+	font-weight: bold;
+}
+.carousel-control-prev i {
+	margin-left: -3px;
+}
+.carousel-control-next i {
+	margin-right: -3px;
+}
+.carousel-indicators {
+	bottom: -50px;
+}
+.carousel-indicators li, .carousel-indicators li.active {
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	margin: 4px;
+	border: none;
+}
+.carousel-indicators li {	
+	background: #ababab;
+}
+.carousel-indicators li.active {	
+	background: #555;
+}
