--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,11 @@ body{
     left: 50px;
     transition: 0.6s
 }
-#q2, #q3{
+#q2, #q3, #q4, 
+#q5, #q6, #q7, 
+#q8, #q9, #q10, 
+#q11, #q12, #q13, 
+#q14, #q15{
     left: 650px
 }
 .h4{
@@ -77,7 +81,7 @@ label{
 }
 .btn.btn-primary{
     background-color: rgb(63, 139, 139);
-    border: 1px solid rgb(63, 139, 139)
+    border: 1px solid rgb(63, 139, 139);
 }
 .btn{
     background-color: inherit;
@@ -225,15 +229,19 @@ a:focus, a:hover {
 	text-align: center;
 	overflow: hidden;
 }
+
 .carousel .carousel-item h4 {
 	font-family: 'Varela Round', sans-serif;
 }
 .carousel .carousel-item img {
 	max-width: 100%;
 	display: inline-block;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+
 }
 .carousel .carousel-item .btn {
-	border-radius: 0;
+	border-radius: 30px;
 	font-size: 12px;
 	text-transform: uppercase;
 	font-weight: bold;
@@ -254,7 +262,8 @@ a:focus, a:hover {
 	margin: 5px;
 	text-align: left;
 	background: #fff;
-	box-shadow: 0px 2px 2px rgba(0,0,0,0.1);   
+	box-shadow: 0px 10px 10px rgba(0,0,0,0.1);  
+    border-radius: 30px; 
 }
 .carousel .thumb-content {
 	padding: 15px;
@@ -302,4 +311,8 @@ a:focus, a:hover {
 }
 .carousel-indicators li.active {	
 	background: #555;
+}
+
+.container-xl {
+    background-color: rgba(255, 204, 0, 0.91);
 }
