--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,18 @@
 body{
     background: rgba(255, 204, 0, 0.91);
 }
+
+.image-class-header {
+    background-image: url('./imgs/bannerheading.jpg');
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+}
+
+.pop-title {
+    width: 100%;
+}
+
 .wrapper{
     max-width: 600px;
     margin: 80px auto 50px;
