--- a/assets/style.css
+++ b/assets/style.css
@@ -34,11 +34,16 @@ body{
     left: 50px;
     transition: 0.6s
 }
-#q2, #q3, #q4, 
-#q5, #q6, #q7, 
-#q8, #q9, #q10, 
-#q11, #q12, #q13, 
-#q14, #q15{
+
+.office-image {
+    margin-top: 40px;
+}
+
+#q1, #q2, #q3, 
+#q4, #q5, #q6, 
+#q7, #q8, #q9, 
+#q10, #q11, #q12, 
+#q13, #q14, #q15{
     left: 650px
 }
 .h4{
