--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,29 @@ body{
     height: 400px;
 }
 
+.card-section {
+    position: relative;
+    background-color: rgba(255, 204, 0, 0.91);
+}
+.card-block {
+    padding: 80px;
+    border-radius: 40px;
+}
+.section-title {
+    border-radius: 40px;
+    margin-bottom: 60px;
+    padding-top: 15px;
+    padding-bottom: 40px;
+    background-image: url(./imgs/popculture.jpg);
+}
+.container {
+    border-radius: 20%;
+}
+
+.tv-background {
+    background-color: lightslategray;
+}
+
 .pop-title {
     width: 100%;
 }
@@ -25,7 +48,7 @@ body{
     padding: 30px;
     border-radius: 20px;
     position: relative;
-    min-height: 550px;
+    height: 100%;
     overflow: hidden
 }
 .wrapper .wrap{
@@ -39,110 +62,288 @@ body{
     margin-top: 40px;
 }
 
-#q1, #q2, #q3, 
-#q4, #q5, #q6, 
-#q7, #q8, #q9, 
-#q10, #q11, #q12, 
-#q13, #q14, #q15{
-    left: 650px
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-.h4{
-    margin: 0
+
+html, body{
+    height: 100%;
 }
-label{
-    display: block;
-    margin-bottom: 15px;
+
+
+body{
+    font-family: 'Montserrat', serif;
+
+}
+
+main{
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    background: url('../assets/background_image.jpg');
+    background-color : black;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.game-quiz-container{
+    width: 100%;
+    height: 100%;
+    background-color: lightgray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 30px;
+}
+
+.game-details-container{
+    width: 80%;
+    height: 4rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.game-details-container h1{
     font-size: 1.2rem;
-    cursor: pointer
 }
-.options{
+
+.game-question-container{
+    width: 80%;
+    height: 8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid darkgray;
+    border-radius: 25px;
+}
+
+.game-question-container h1{
+    font-size: 1.1rem;
+    text-align: center;
+    padding: 3px;
+}
+
+.game-options-container{
+    width: 80%;
+    height: 12rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.game-options-container span{
+    width: 45%;
+    height: 3rem;
+    border: 2px solid darkgray;
+    border-radius: 20px;
+    overflow: hidden;
+}
+span label{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: transform 0.3s;
+    font-weight: 600;
+    color: rgb(22, 22, 22);
+}
+
+span label:hover{
+    -ms-transform: scale(1.12);
+    -webkit-transform: scale(1.12);
+    transform: scale(1.12);
+    color: white;
+}
+
+input[type="radio"] {
     position: relative;
-    padding-left: 30px
+    display: none;
 }
-.options input{
-    opacity: 0
+
+
+input[type=radio]:checked ~ .option {
+    background: paleturquoise;
 }
-.checkmark{
-    position: absolute;
-    top: 4px;
-    left: 3px;
-    height: 20px;
-    width: 20px;
-    background-color: #c0e2df;
-    border: 2px solid #444;
-    border-radius: 50%
+
+.next-button-container{
+    width: 50%;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
 }
-.options input:checked~.checkmark:after{
-    display: block
+.next-button-container button{
+    width: 8rem;
+    height: 2rem;
+    border-radius: 10px;
+    background: none;
+    color: rgb(25, 25, 25);
+    font-weight: 600;
+    border: 2px solid gray;
+    cursor: pointer;
+    outline: none;
 }
-.options .checkmark:after{
-    content: "";
-    width: 9px;
-    height: 9px;
-    display: block;
-    background: white;
-    position: absolute;
-    top: 51%;
-    left: 51%;
-    border-radius: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    transition: 300ms ease-in-out 0s
+.next-button-container button:hover{
+    background-color: rgb(143, 93, 93);
 }
-.options input[type="radio"]:checked~.checkmark{
-    background: #590995;
-    border: 2px solid #590995;
-    transition: 300ms ease-in-out 0s
+
+.modal-container{
+    display: none;
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    -webkit-animation: fadeIn 1.2s ease-in-out;
+    animation: fadeIn 1.2s ease-in-out;
 }
-.options input[type="radio"]:checked~.checkmark:after{
-    transform: translate(-50%, -50%) scale(1)
+
+.modal-content-container{
+    height: 20rem;
+    width: 25rem;
+    background-color: rgb(43, 42, 42);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 25px;
 }
-.btn.btn-primary{
-    background-color: rgb(63, 139, 139);
-    border: 1px solid rgb(63, 139, 139);
+
+.modal-content-container h1{
+    font-size: 1.3rem;
+    height: 3rem;
+    color: lightgray;
+    text-align: center;
 }
-.btn{
-    background-color: inherit;
-    border: 1px solid rgb(63, 139, 139);
-    border-radius: 20px
+
+.grade-details{
+    width: 15rem;
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
-.btn:focus{
-    box-shadow: none
+
+.grade-details p{
+    color: white;
+    text-align: center;
 }
-.btn:hover{
-    background-color: teal;
-    color: #fff
+
+.modal-button-container{
+    height: 2rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.fa-arrow-right, .fa-arrow-left{
-    transition: 0.2s ease-in all
+
+.modal-button-container button{
+    width: 10rem;
+    height: 2rem;
+    background: none;
+    outline: none;
+    border: 1px solid rgb(252, 242, 241);
+    color: white;
+    font-size: 1.1rem;
+    cursor: pointer;
+    border-radius: 20px;
 }
-.btn.btn-primary:hover .fa-arrow-right{
-    transform: translate(8px)
+.modal-button-container button:hover{
+    background-color: rgb(83, 82, 82);
 }
-.btn.btn-primary:hover .fa-arrow-left{
-    transform: translate(-8px)
-}
-@media(max-width: 767px){
-    .wrapper{
-        margin: 30px 10px;
-        height: 420px
+
+@media(min-width : 300px) and (max-width : 350px){
+    .game-quiz-container{
+        width: 90%;
+        height: 80vh;
+     }
+     .game-details-container h1{
+        font-size: 0.8rem;
+     }
+
+     .game-question-container{
+        height: 6rem;
+     }
+     .game-question-container h1{
+       font-size: 0.9rem;
     }
-    .wrapper .wrap{
-        width: 280px;
-        left: 15px
+
+    .game-options-container span{
+        width: 90%;
+        height: 2.5rem;
+    }
+    .game-options-container span label{
+        font-size: 0.8rem;
+    }
+    .modal-content-container{
+        width: 90%;
+        height: 25rem;
+    }
+
+    .modal-content-container h1{
+        font-size: 1.2rem;
     }
 }
-.switch{
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 28px;
-    background-color: inherit
+
+@media(min-width : 350px) and (max-width : 700px){
+   .game-quiz-container{
+       width: 90%;
+       height: 80vh;
+    }
+    .game-details-container h1{
+        font-size: 1rem;
+    }
+
+    .game-question-container{
+        height: 8rem;
+    }
+
+    .game-question-container h1{
+        font-size: 0.9rem;
+     }
+
+    .game-options-container span{
+        width: 90%;
+    }
+    .modal-content-container{
+        width: 90%;
+        height: 25rem;
+    }
+    .modal-content-container h1{
+        font-size: 1.2rem;
+    }
 }
-.switch input{
-    opacity: 0;
-    width: 0;
-    height: 0
-}
+
+
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }
+
+  @-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
 
 /* Header CSS */
 body {
@@ -213,29 +414,6 @@ a:focus, a:hover {
     color: #fff;
     font-weight: 600;
     text-align: center;
-}
-.card-section {
-    position: relative;
-    bottom: 60px;
-    background-color: rgba(255, 204, 0, 0.91);
-}
-.card-block {
-    padding: 80px;
-    border-radius: 40px;
-}
-.section-title {
-    border-radius: 40px;
-    margin-bottom: 60px;
-    padding-top: 15px;
-    padding-bottom: 40px;
-    background-image: url(./imgs/popculture.jpg);
-}
-.container {
-    border-radius: 20%;
-}
-
-.tv-background {
-    background-color: lightslategray;
 }
 
 .carousel {
