--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 .image-class-header {
-    background-image: url('./imgs/bannerheading.jpg');
+    background-image: url('/assets/imgs/bannerheading.jpg');
     background-size: cover;
     width: 100%;
     height: 400px;
@@ -28,7 +28,7 @@ body{
     margin-bottom: 60px;
     padding-top: 15px;
     padding-bottom: 40px;
-    background-image: url(./imgs/popculture.jpg);
+    background-image: url(/assets/imgs/popculture.jpg);
 }
 .container {
     border-radius: 20%;
@@ -86,7 +86,7 @@ main{
     justify-content: center;
     align-items: center;
     background-color: black;
-    background: url('../assets/background_image.jpg');
+    background: url('./assets/background_image.jpg');
     background-color : black;
     background-repeat: no-repeat;
     background-size: cover;
