--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -35,7 +35,7 @@ body{
 }
 
 .tv-background {
-    background-color: lightslategray;
+    background-color: rgb(32, 139, 247);
 }
 
 .pop-title {
@@ -96,7 +96,7 @@ main{
 .game-quiz-container{
     width: 100%;
     height: 100%;
-    background-color: lightgray;
+    background: white;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -324,6 +324,11 @@ input[type=radio]:checked ~ .option {
     .game-options-container span{
         width: 90%;
     }
+
+    span label {
+        font-size: 0.9rem;
+    }
+
     .modal-content-container{
         width: 90%;
         height: 25rem;
