--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -139,6 +139,7 @@ main{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
+    text-align: center;
 }
 
 .game-options-container span{
@@ -272,9 +273,14 @@ input[type=radio]:checked ~ .option {
 }
 
 @media(min-width : 300px) and (max-width : 350px){
+    .card-block{
+        padding: 0px;
+        border-radius: 40px;
+    }
+
     .game-quiz-container{
         width: 90%;
-        height: 80vh;
+        height: 130vh;
      }
      .game-details-container h1{
         font-size: 0.8rem;
@@ -284,15 +290,16 @@ input[type=radio]:checked ~ .option {
         height: 6rem;
      }
      .game-question-container h1{
-       font-size: 0.9rem;
+       font-size: 0.7rem;
     }
 
     .game-options-container span{
         width: 90%;
-        height: 2.5rem;
+        height: 4rem;
     }
     .game-options-container span label{
-        font-size: 0.8rem;
+        font-size: 0.6rem;
+        line-height: 1.5;
     }
     .modal-content-container{
         width: 90%;
@@ -305,7 +312,12 @@ input[type=radio]:checked ~ .option {
 }
 
 @media(min-width : 350px) and (max-width : 700px){
-   .game-quiz-container{
+    .card-block{
+        padding: 0px;
+        border-radius: 40px;
+    }
+
+    .game-quiz-container{
        width: 90%;
        height: 80vh;
     }
