--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -42,6 +42,10 @@ body{
     width: 100%;
 }
 
+.table {
+    border-radius: 30px;
+}
+
 .wrapper{
     max-width: 900px;
     margin: 80px auto 50px;
